--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="https://scontent.fsgn2-3.fna.fbcdn.net/v/t39.30808-1/280412214_1089916254920940_4866382268678093316_n.jpg?stp=dst-jpg_p240x240&_nc_cat=106&ccb=1-6&_nc_sid=7206a8&_nc_ohc=DKisxIwKcf8AX9npj8r&_nc_ht=scontent.fsgn2-3.fna&oh=00_AT8VQztITmmqISL9nN1B3YcLUZgdLKa2eO0Z0uYKf_MMjw&oe=627E2947" alt="" class="img-fluid rounded-circle">
+        <img src="https://avatars.githubusercontent.com/u/89569852?v=4" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Vo Nhat Anh</a></h1>
         <div class="social-links mt-3 text-center">
 <!--          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
